// Iproto2 by default
syntax = "proto3";

// This is where the autogenerated java classes will be stored
package dk.dd.grpcis.stubs.exam;

// Each compiled file goes in a  a single class
option java_multiple_files = true;

// This is the request message
message ExamRequest
{
  string id = 1;
}

// This is the response message
message ExamResponse
{
  string id = 1;
  Grade si = 2;
  Grade dls= 3;
  Grade tst = 4;
}

// Students grades are given either as PASS or FAIL.
enum Grade
{
  PASS = 0;
  FAIL = 1;
}

// The service
service ExamService
{
  rpc getExamForStudent(ExamRequest) returns (ExamResponse);
}
